--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
 asgiref==3.8.1
+Brotli==1.1.0
+cffi==1.16.0
+cssselect2==0.7.0
 Django==5.0.3
 django-htmx==1.17.3
+fonttools==4.51.0
+html5lib==1.1
+pillow==10.3.0
+pycparser==2.22
+pydyf==0.9.0
+pyphen==0.14.0
+six==1.16.0
 sqlparse==0.4.4
+tinycss2==1.2.1
 typing_extensions==4.10.0
+weasyprint==61.2
+webencodings==0.5.1
+zopfli==0.2.3
